--- a/src/css/style.css
+++ b/src/css/style.css
@@ -3,38 +3,26 @@
 * {
   font-family: 'Open Sans', sans-serif;
 }
-
-html,
-body {
-  margin: 0px;
-  padding: 0px;
+body{
+  margin-top: 30px;
 }
-
-#main {
-  width: 100vw;
-  height: 100vh;
+#main{
   display: flex;
-  flex-direction: column;
   justify-content: center;
-  align-items: center;
+  background-color: lightgreen;
+  width: 70%;
+  margin: auto;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
 }
-
-p {
-  margin: 4px;
-}
-
-code {
-  font-family: monospace;
-  font-size: 1rem;
-  background-color: rgb(219, 219, 219);
-  padding: 2px;
-}
-
-#api-status {
-  margin-top: 100px;
-  font-family: monospace;
+.heading{
+  width: 200px;
   text-align: center;
-  font-size: 1rem;
-  background-color: rgb(219, 219, 219);
-  padding: 10px;
+  border: 10px solid black ;
+  border-radius: 10px;
 }
+#main h1{
+  background-color: coral;
+}
+
+
